# solana-job-queue

./: .gitignore  Anchor.toml  README.md  SUBMISSION.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
app/: package.json
app/src/: App.css  App.tsx
app/src/components/: Dashboard.tsx  JobList.tsx  QueueStats.tsx  SubmitJobForm.tsx
app/src/hooks/: useJobQueue.ts
cli/src/: index.ts
programs/job-queue/: Cargo.toml
programs/job-queue/src/: constants.rs  error.rs  lib.rs
programs/job-queue/src/instructions/: claim_job.rs  close_completed_job.rs  complete_job.rs  create_queue.rs  expire_stale_jobs.rs  fail_job.rs  mod.rs  submit_job.rs  update_queue.rs
programs/job-queue/src/state/: job.rs  job_queue.rs  mod.rs
tests/: job-queue.ts
